crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__agent_capability.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 389
expression: screen
---
┌ query-engine ──────────────────┐
│!1                              │
│                                │
│▌feature-migration            1!│
│▎! claude  db migrate         <t>│
│▎  Opus · xhigh · yolo          │
│▎  ───────────────────────────  │
│                                │
│↵ jump to claude                │
│                                │
│                                │
└────────────────────────────────┘
