crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__agent_card_resource_stats.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 748
expression: screen
---
 ⌘ query-engine

 ¤ 1
 ◎ 0
 ──────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                       ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k                $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━━─────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k   C 11%  M 1.1G  ⇅ 3M/s

                       ? for help
