crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__agent_rollup.snap
---
source: crates/rimz-sidebar/src/render.rs
assertion_line: 424
expression: screen
---
┌ Rimz | ws_0123456789abcdef01234567 ──────────────────────────────────────────┐
│Generated <elapsed> ago                                                            │
│                                                                              │
│Agents                                                                        │
│codex      waiting  interactive feature-migration                             │
│                                                                              │
│Needs your attention                                                          │
│-                                                                             │
│                                                                              │
│Resolver is working                                                           │
│-                                                                             │
│                                                                              │
│Recently answered                                                             │
│-                                                                             │
│                                                                              │
│Recent activity                                                               │
│-                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
