crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__api_error_dead_turn_card.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 749
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────────────────────
 ? 0   ! 1   ○ 0   ⏸︎ 0                     ⢿ 0   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌! claude · Opus 4.8 · high · 200k              $1.27
▌  API Error: Overloaded
▌  ▣ ━━━━━━━━━━━━━━━━────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k                  ◔ <t>

                ␣ next ?!   ? for help
