crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__codex_card_context_composition.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ codex · GPT 5.5 · 258k
▌  add tests
▌  ▣ ━━━━━━━━━━━━━━━━────────────────   50%
▌  ▤ 129k · ◌ 120k ↘ 9k ↗ 800

                 ? for help
