crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__commands_divider.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0           ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude
▌  db migrate
▌  ▢ ────────────────────────────────    0%
▏
▏┄ commands ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▏○ zsh



                 ? for help
