crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__degraded_banner.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
expression: screen
---
┌ query-engine ────────────────────────────────────────────────────────────────┐
│0 agents                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│! Sidebar degraded for <elapsed>: snapshot failed: ledger not found                  │
└──────────────────────────────────────────────────────────────────────────────┘
